# iterx

./: README.md  pyproject.toml
resources/: README.md
resources/data/famus/: definitions.json
resources/data/famus_with_prefixed_roles/: definitions.json
resources/data/granular/: README.md
resources/data/muc/: README.md  definitions.json
resources/data/scirex/: definitions.json
resources/model_outputs/: README.md
resources/training_configs/: famus_config.jsonnet  famus_report_config.jsonnet  famus_source_config_mixed_spans.jsonnet  muc_config.jsonnet  scirex_config.jsonnet
resources/training_configs/famus_with_prefix/: famus_report_config_gold_spans.jsonnet  famus_report_config_mixed_spans.jsonnet  famus_report_config_predicted_spans.jsonnet  famus_source_config_gold_spans.jsonnet  famus_source_config_mixed_spans.jsonnet  famus_source_config_predicted_spans.jsonnet
resources/training_configs/famus_without_prefix/: famus_report_config_gold_spans.jsonnet  (+5 more)
scripts/: allennlp-debugger-endpoint.py  ceaf-scorer.py
src/better/metrics/: better.py
src/data_processing/: copy_famus_data.sh  copy_famus_data_with_role_prefix.sh  copy_famus_data_without_role_prefix.sh  create_famus_dir.sh  create_famus_vocab_defs.py  create_famus_vocab_defs_with_role_prefix.py  preprocess_raw_famus_to_release_version.py  preprocess_release_format_to_iterx_format.py  preprocess_release_format_to_qa_format.py  run_preprocess_pipeline.sh
src/jobs/: evaluate_famus.sh  train_famus_report.sh  train_famus_report_mixed_spans.sh  train_famus_source.sh  train_famus_source_mixed_spans.sh
(+84 files in other folders)
