[tool.poetry]
name = "iterx"
version = "0.1.0"
description = ""
authors = ["Yunmo Chen <chanwanmok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.0.0"
jsonlines = "^3.1.0"
tqdm = "^4.65.0"
concrete = "^4.17.0"
ansicolor = "^0.3.2"
ansicolors = "^1.1.8"
overrides = "^7.3.1"
jsons = "^1.6.3"
iso-639 = { git = "https://github.com/noumar/iso639.git" }
cement = { git = "https://github.com/wanmok/cement.git" }
# We maintain forks of AllenNLP to resolve dependency issues.
allennlp = { git = "https://github.com/wanmok/allennlp.git" }
